@@ -12,6 +12,6 @@ export default function (init: ShadowRootInit) {
 
   tinymce.init({
     target: node,
-    plugins: 'advlist charmap code codesample emoticons image link lists media paste preview searchreplace table wordcount'
+    plugins: 'advlist charmap code codesample emoticons fullscreen image link lists media paste preview searchreplace table wordcount'
   });
 }
